feat: Enable employee CRUD and update project configs
Uncommented and implemented full CRUD operations for Employee in backend controller and service, including DTO and mapper updates. Switched date type to LocalDateTime, fixed role DTO field name, and enabled required Spring annotations. Updated frontend TypeScript configs for better React and module support. Cleaned up README formatting and removed unused Maven plugins from backend pom.xml.